--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-*~
 /venv/
-__pycache__/
-.pytest_cache/
+
 *.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
 *.egg-info/
+
+*~
