--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,7 @@
 runtime: python38
 entrypoint: gunicorn -b :$PORT "sampleapp:create_app()"
+
+handlers:
+  - url: /.*
+    secure: always
+    script: auto
