--- a/tests/fixtures/users.yml
+++ b/tests/fixtures/users.yml
@@ -1,26 +1,26 @@
 michael:
   name: Michael Example
   email: michael@example.com
-  password: 'password'
+  password: password
   admin: True
   activated: True
 
 archer:
   name: Sterling Archer
   email: duchess@example.gov
-  password: 'password'
+  password: password
   activated: True
 
 lana:
   name: Lana Kane
   email: hands@example.gov
-  password: 'password'
+  password: password
   activated: True
 
 malory:
   name: Malory Archer
   email: boss@example.gov
-  password: 'password'
+  password: password
   activated: True
 
 # users_index_test.pyのテストでユーザーが30人以上必要だが
